--- a/Buttons.html
+++ b/Buttons.html
@@ -1,4 +1,13 @@
-*{
+<!doctype html>
+<html lang="en">
+  <!--https://github.com/stevss9-->
+<head>
+  <meta charset="utf-8">
+  <title>Botones con css</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+<style>
+  *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -78,3 +87,11 @@
     width: 20px;
     left: 80%;
   }
+</style>
+</head>
+<body>
+  <a href="#" style="--clr:#1e9bff"><span>Botón 1</span><i></i></a>
+  <a href="#" style="--clr:#6eff3e"><span>Botón 2</span><i></i></a>
+  <a href="#" style="--clr:#ff1867"><span>Botón 2</span><i></i></a>
+</body>
+</html>
